# AIYoutubeSummaryApp

./: .gitignore  .replit  app.py  llm_utils.py  models.py  pyproject.toml  replit.nix  requirements.txt  youtube_utils.py
instance/: youtube_summary.db
static/css/: style.css
static/js/: main.js
templates/: base.html  index.html  processing.html  result.html
