[project]
name = "repl-nix-aiyoutubesummaryapp"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "youtube-transcript-api>=0.6.2",
    "transformers>=4.46.2",
    "requests>=2.32.3",
    "torch>=2.5.1",
    "sqlalchemy>=2.0.36",
    "sentencepiece",
    "fugashi",
    "unidic-lite",
    "langdetect",
    "flask-wtf>=1.2.2",
    "ollama>=0.3.3",
]
